# color-thief

./: LICENSE  README.md  pyproject.toml
color_thief/: __init__.py  __main__.py  algo.py  types.py  utils.py
color_thief/libs/: octree_quantizer.py
